# difftron

./: .mise.toml  AGENTS.md  CONTRIBUTING.md  Cargo.toml  README.md  mise.toml
emacs/: AGENTS.md  difftron-lint-tests.el  difftron-lint.el  difftron-magit-lint-tests.el  difftron-magit-lint.el  difftron-magit-tests.el  difftron-magit.el  difftron-tests.el  difftron.el  rust-dive-magit-lint-tests.el  rust-dive-magit-lint.el  rust-dive-magit-tests.el  rust-dive-magit.el
emacs/test-config/: .gitignore  bootstrap.el  init.el  lint-init.el
emacs/test-config/straight/versions/: default.el
example-diffs/parent-child-changes/: lhs.rs  rhs.rs
minidiff/: Cargo.toml
minidiff/examples/: invocations.rs
minidiff/fixtures/clojure/: README.md  nested-reshape.lhs.clj  nested-reshape.rendered.txt  nested-reshape.rhs.clj
minidiff/src/: diff.rs  inline.rs  ir.rs  lang.rs  lib.rs  logging.rs  presentation.rs  render.rs
script/: _common.sh  bench-diff-repro.sh  difftron_dev  format.sh  pre-commit.sh  rust_dive_dev  test.sh
scripts/: _common.sh  difftron_dev  format.sh  pre-commit.sh  run-emacs-tests.sh  run-rust-tests.sh  run-tests.sh  rust_dive_dev  setup-test-deps.sh  test.sh
src/: difftastic_renderer.rs  entity_collector.rs  logging.rs  main.rs  minidiff_renderer.rs  output.rs  project_discovery.rs  snapshot.rs  source_repo.rs
src/languages/: clojure.rs  mod.rs  rust.rs  typescript.rs
tests/: cli.rs
