[workspace]
members = [".", "minidiff"]
default-members = [".", "minidiff"]
resolver = "2"

[package]
name = "difftron"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
arborium-clojure = "2.16"
arborium-typescript = "2.16"
clap = { version = "4", features = ["derive"] }
env_logger = "0"
gix = "0"
id-arena = "2"
ra_ap_syntax = "0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
time = { version = "0", features = ["formatting", "local-offset", "macros"] }
toml = "0"
tracing = "0"
tracing-subscriber = { version = "0", features = ["env-filter"] }
tracing-tree = "0"
tree-sitter-patched-arborium = "0.25"
minidiff = { path = "minidiff" }
